--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
             <scope>compile</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-server-standalone -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-server-standalone</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+
+
     </dependencies>
 
 
